shell_server/server/styles/dashboard.css
body:not([user-hash]) {
    color: red;
}

body {
    display: flex;
    flex-direction: column;
}

#header {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 0 1rem;

    background-color: var(--bgspecial);
    color: var(--fgspecial);
}

@media (max-width: 600px) {
    #header>div:nth-child(1), #header-after {
        display: none;
    }
}

#header h1 {
    font-size: 1.8rem;
}

#header a {
    font-size: .9rem;
    color: var(--fgspecial);
}

#header-right {
    display: flex;
    justify-content: right;
}

#header-right a {
    text-align: right;
}

#header-after {
    position: absolute;
    bottom: .2em;
    left: .2em;

    margin: 0;

    filter: opacity(50%);
    font-size: .6em;
}

#main {
    flex-grow: 1;
}

@media (min-width: 600px) {
    #main {
        display: flex;
    }

    #left {
        max-width: 300px;
    }

    #right {
        overflow: auto hidden;
    }
}

@media (max-width: 600px) {
    #right {
        overflow: hidden;
    }
}

#left {
    overflow: hidden auto;
    flex: 1;

    min-width: 300px;
    padding: .5em 1.5em;

    background-color: var(--bg3);
    box-shadow: 0 0 10px #00000040;
}

#left h2 {
    font-size: 1.5rem;
}

#left p {
    text-align: center;
}

ul {
    padding: 0;
}

li {
    position: relative;

    box-sizing: border-box;
    width: 100%;
    margin: .7em 0;
    padding: .5em;

    border: 2px solid var(--bg3);
    border-radius: .6em;
    --bgcol: #8798ba;
    background-color: var(--bgcol);
    color: var(--bg1);
}

li.selected {
    --bgcol: #4065ac;

    box-shadow: 0 0 20px #3763b830;
}

li:is(:hover, .selected) {
    cursor: pointer;
    border: 2px solid var(--bgcol);
}

li::marker {
    content: none;
}

li::after {
    content: "";
    position: absolute;

    display: block;
    width: 1em;
    height: 1em;

    top: 50%;
    right: 0;
    transform: translate(-50%, -50%);

    --state-bg: #d55f5f;

    background-color: var(--state-bg);
    border: .15em solid var(--bg1);
    border-radius: .3em;
}

li.active::after {
    --state-bg: #5ead5e;
}

li.idle::after {
    --state-bg: #dfb056;
}

#right {
    flex: 1;

    padding: .5em 1.5em;
}

#right h3 {
    margin: 1em 0 0 0;
    font-size: 1.2rem;
}

#shell, #command-form {
    max-height: 50vh;
    overflow: hidden auto;

    margin: .7em 0;
    padding: .5em;

    border-radius: .5em;
    background-color: var(--bgshell);
    color: var(--fgshell);

    font-family: var(--mono);
}

#shell p, #command-form :is(label, input) {
    font-size: .8em;
}

#shell p {
    margin: .3em 0;
}

#shell p.pending {
    color: #957777;
}

#shell p.special {
    color: #c7ab3f;
}

#command-form {
    display: flex;
    align-items: center;
    gap: 1ch;
}

#command-form input {
    flex-grow: 1;

    background-color: transparent;
    border: none;

    font-family: var(--mono);
    color: var(--fgshell);
}

#actions {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 1em;

    margin: 1em .5em;
}

